# SkillGroups

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TESTING_NOTES.txt  plugin.cpp
Data/Interface/Translations/: SkillGroups_english.txt
Data/MCM/Config/SkillGroups/: settings.ini
Data/SKSE/Plugins/: SkillGroups.ini
Data/SKSE/Plugins/SkillGroups/Profiles/: Custom.ini  Default.ini  Hunter.ini  Mage.ini  Thief.ini  Warrior.ini
Data/Scripts/: SkillGroups_MCM.pex  SkillGroups_Native.pex
Data/Source/Scripts/: SkillGroups_MCM.psc  SkillGroups_Native.psc
src/SkillGroups/: Core.cpp  Core.h  Hook.cpp  Hook.h  Papyrus.cpp  Papyrus.h  Profiles.cpp  Profiles.h  Settings.cpp  Settings.h
tests/: SkillGroupsTests.cpp
